test/scc/expr/semantic-errors/143.t
void(**a)();
void* b = (void*)a;